Minor changes to Introduction notebook

--- a/nb/Introduction.ipynb
+++ b/nb/Introduction.ipynb
@@ -508,8 +508,16 @@
     "For applications in Cosmology:\n",
     "\n",
     "* Holsclaw et al 2010 - [Nonparametric Reconstruction of the Dark Energy Equation of State](https://arxiv.org/abs/1009.5443)\n",
-    "* Shafieloo, Kim, Linder 2012 - [Gaussian Process Cosmography](https://arxiv.org/abs/1204.2272)"
+    "* Shafieloo, Kim, Linder 2012 - [Gaussian Process Cosmography](https://arxiv.org/abs/1204.2272)\n",
+    "* Calderon, L'Huillier, Polarski, Shafieloo & Starobinsky\n",
+    " [Joint reconstructions of growth and expansion histories from Stage-IV surveys with\n",
+    "minimal assumptions I: Dark Energy beyond $\\Lambda$](https://arxiv.org/abs/2206.13820)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
