Add some references

--- a/nb/Introduction.ipynb
+++ b/nb/Introduction.ipynb
@@ -498,7 +498,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **VI - Further reading**\n"
+    "### **VI - Further reading**\n",
+    "\n",
+    "Hwang et al. 2022 [How to use GP: Effects of the\n",
+    "mean function and hyperparameter\n",
+    "selection on Gaussian Process\n",
+    "regression](https://arxiv.org/abs/2206.15081)"
    ]
   },
   {
@@ -513,16 +518,6 @@
     " [Joint reconstructions of growth and expansion histories from Stage-IV surveys with\n",
     "minimal assumptions I: Dark Energy beyond $\\Lambda$](https://arxiv.org/abs/2206.13820)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
